--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   "scripts": {
     "test": "simpleunit ./test -r"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
+    "gelex": "0.0.1",
     "simpleunit": "0.0.8"
   }
 }
