--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "gepars",
-  "description": "Generic parser, WIP",
+  "description": "Generic parser",
   "keywords": [
     "parser",
     "compiler"
   ],
-  "version": "0.0.1alpha",
+  "version": "0.0.1",
   "author": "Angel 'Java' Lopez <webmaster@ajlopez.com> (http://www.ajlopez.com)",
   "repository": {
     "type": "git",
